--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "daisyui": "^2.51.6",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1",
     "tailwindcss": "^3.3.2"
   }
 }
